group_board: prevent user list from overflowing

--- a/app/modules/network/scss/_group_board.scss
+++ b/app/modules/network/scss/_group_board.scss
@@ -48,6 +48,7 @@
         // Disabled overflow to allow dropdown menus with absolute positions
         // overflow: auto;
         padding-right: 0.4em;
+        overflow: auto;
       }
       .section-toggler{
         padding: 0.4em;
